# iec-custom-component

./: .devcontainer.json  .gitattributes  .gitignore  .ruff.toml  AGENTS.md  CONTRIBUTING.md  README.md  README_DEV.md  examples.md  hacs.json  iec-coordinator-improvement-plan.md  mypy.ini  plan.md  pyproject.toml  renovate.json  requirements-test.txt  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: automerge.yml  autotag.yml  issue-duplicate-finder.lock.yml  issue-duplicate-finder.md  lint.yml  release.yml  test.yml  validate.yml
.planning/debug/: iec-sensor-shows-zero.md
config/: configuration.yaml
custom_components/iec/: __init__.py  bill.py  binary_sensor.py  commons.py  config_flow.py  const.py  coordinator.py  data_fetcher.py  diagnostics.py  entity.py  iec_entity.py  manifest.json  sensor.py  services.yaml  statistics.py  strings.json
docs/plans/: 2025-07-02-Issue-297-Retry-and-Authentication-Retry.md
scripts/: develop  setup  typecheck
tests/: __init__.py  test_bill.py
tests/coordinator/: test_retry.py
token-optimizer/: trends.db  trends.db-shm  trends.db-wal
token-optimizer/sessions/: ses_0c9e16c73ffetPiZ94Yc9xL11B.db-shm  ses_0c9e16c73ffetPiZ94Yc9xL11B.db-wal  ses_0ca0809acffe3e8H94XgR0TTlf.db-shm  ses_0ca0809acffe3e8H94XgR0TTlf.db-wal  ses_0ccce6854ffelcKf1LXBGrOWZE.db  ses_0ccce6854ffelcKf1LXBGrOWZE.db-shm  ses_0ccce6854ffelcKf1LXBGrOWZE.db-wal  ses_0d710ce14ffeYZAvOWZeEjksaq.db  ses_0d710ce14ffeYZAvOWZeEjksaq.db-shm  ses_0d710ce14ffeYZAvOWZeEjksaq.db-wal  (+5 more)
(+2 files in other folders)
