[tool.poetry]
name = "iec-custom-component"
version = "0.1.0"
description = "HomeAssistant custom component for IEC"
authors = ["Guy Khmelnitsky <guykhmel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colorlog = "^6.8.2"
homeassistant = "2023.12.0"
ruff = "^0.2.2"
iec-api = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
